small optimizations, fixed comment as last statemend bug

--- a/todo
+++ b/todo
@@ -5,7 +5,7 @@ https://phoenixnap.com/kb/install-gcc-windows - instrukcja do konfiuguracji gcc
 
 obsluga bledow
 printowanie stringow, w ogole printowanie czegos co nie jest nazwa zmiennej
-
+logical expression powinno się moc dać normalnie jako wartosc zmiennej
 wywala błąd jesli ostatnia instrukcja jest komentarz
 
 naprawić ctrl + Z
