--- a/todo
+++ b/todo
@@ -4,6 +4,8 @@ instrukcje uzycia trzeba, czli ze trzeba pobrac gcc, antlr,
 https://phoenixnap.com/kb/install-gcc-windows - instrukcja do konfiuguracji gcc
 
 obsluga bledow
+dodawanie stringow
+błąd z uzyciem niezadeklarownej zmiennej
 
 naprawić ctrl + Z
 kolorwanie kodu w gui
